<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="24dp"
    app:cardCornerRadius="20dp"
    app:cardElevation="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/tvIncomeTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/tv_income_title"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textColor="?android:textColorPrimary"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvIncomeAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/tv_income_amount"
            android:textColor="#43A047"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvIncomeDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/tv_income_date"
            android:textColor="?android:textColorPrimary" />

        <TextView
            android:id="@+id/tvIncomeDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/tv_income_description"
            android:textColor="?android:textColorPrimary" />

        <Button
            android:id="@+id/btnIncomeClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:backgroundTint="@color/bg_teal"
            android:text="@string/btn_income_close"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>
</androidx.cardview.widget.CardView>
